--- a/src/global.css
+++ b/src/global.css
@@ -1,46 +1,48 @@
 :root {
-    font-size: 62.5%;
+  font-size: 62.5%;
 
-    --purple: #8284FA;
-    --purple-dark: #5E60CE;
-    --blue: #4EA8DE;
-    --blue-dark: #1E6F9F;
-    --danger: #E25858;
+  --purple: #8284fa;
+  --purple-dark: #5e60ce;
+  --blue: #4ea8de;
+  --blue-dark: #1e6f9f;
+  --danger: #e25858;
 
-    --gray-700: #0D0D0D;
-    --gray-600: #1A1A1A;
-    --gray-500: #262626;
-    --gray-400: #333333;
-    --gray-300: #808080;
-    --gray-200: #D9D9D9;
-    --gray-100: #F2F2F2;
+  --gray-100: #f2f2f2;
+  --gray-200: #d9d9d9;
+  --gray-300: #808080;
+  --gray-400: #333333;
+  --gray-500: #262626;
+  --gray-600: #1a1a1a;
+  --gray-700: #0d0d0d;
 
-
-    --form-height: 6rem;
+  -webkit-font-smoothing: antialiased;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,
+button,
+input,
+textarea {
+  font-family: "Inter", sans-serif;
+  font-size: 1.6rem;
 }
 
 body {
-    font-size: 1.6rem;
-    font-family: 'Inter', sans-serif;
-    line-height: 1.4;
-
-    color: var(--gray-100);
-    background: var(--gray-600);
-
-    width: 100%;
-    height: 100%;
+  background-color: var(--gray-600);
+  -webkit-font-smoothing: antialiased;
 }
 
-button, textarea {
-    font-size: 1.6rem;
-    font-family: 'Inter', sans-serif;
-    line-height: 1.4;
-    border: none;
-    background: none;
+button {
+  border: none;
+  background: none;
+}
+
+:focus {
+  outline: 0;
+  /*box-shadow: 0 0 0 2px var()};*/
 }
