--- a/src/global.css
+++ b/src/global.css
@@ -1,48 +1,46 @@
-:root {
-  font-size: 62.5%;
+import { createGlobalStyle } from "styled-components";
 
-  --purple: #8284fa;
-  --purple-dark: #5e60ce;
-  --blue: #4ea8de;
-  --blue-dark: #1e6f9f;
-  --danger: #e25858;
+export const GlobalStyle = createGlobalStyle`
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
-  --gray-100: #f2f2f2;
-  --gray-200: #d9d9d9;
-  --gray-300: #808080;
-  --gray-400: #333333;
-  --gray-500: #262626;
-  --gray-600: #1a1a1a;
-  --gray-700: #0d0d0d;
+  :root {
+    font-size: 62.5%;
 
-  -webkit-font-smoothing: antialiased;
-}
+    --purple: #8284FA;
+    --purple-dark: #5E60CE;
+    --blue: #4EA8DE;
+    --blue-dark: #1E6F9F;
+    --danger: #E25858;
+    --gray-700: #0D0D0D;
+    --gray-600: #1A1A1A;
+    --gray-500: #262626;
+    --gray-400: #333333;
+    --gray-300: #808080;
+    --gray-200: #D9D9D9;
+    --gray-100: #F2F2F2;
+  }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+  body, input, textarea, button {
+    font-family: 'Inter', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 140%;
+  }
 
-body,
-button,
-input,
-textarea {
-  font-family: "Inter", sans-serif;
-  font-size: 1.6rem;
-}
+  body {
+    background: var(--gray-600);
+  }
 
-body {
-  background-color: var(--gray-600);
-  -webkit-font-smoothing: antialiased;
-}
-
-button {
-  border: none;
-  background: none;
-}
-
-:focus {
-  outline: 0;
-  /*box-shadow: 0 0 0 2px var()};*/
-}
+  button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: none;
+    gap: .8rem;
+  }
+`;
